feat: プライバシーポリシーに本文を追加

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,11 +12,13 @@
   <!-- 日本語用 Shippori Mincho jp -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@400;500;600;700;800&display=swap"
+    rel="stylesheet">
   <!-- 日本語用 M PLUS Rounded 1c -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap"
+    rel="stylesheet">
   <!-- 英語用 Oswald -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,15 +26,17 @@
   <!-- 英語用 montserrat -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <link rel="icon" href="/img/logo.webp">
   <link rel="stylesheet" href="./css/reset.css">
   <!-- <link rel="stylesheet" href="./css/style.css"> -->
   <link rel="stylesheet" href="./css/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!-- jQueryの読み込み -->
 </head>
-<body>
-  <!-- ******************************* header ******************************* -->
+
+<body class="privacy-policy-page">
+  <!-- *************** header *************** -->
   <header class="header">
     <div class="header__container">
       <div class="header__company-info">
@@ -71,7 +76,60 @@
       <h1>Privacy Policy</h1>
     </div>
   </div>
-  <!-- ******************************* footer ******************************* -->
+  <main>
+    <div class="privacy-policy__inner">
+      <p class="p-p__intro">
+        有限会社 田里興業（以下、「当社」といいます。）は、個人情報を適切に管理し、プライバシーの保護に努めるため、以下の方針を定め、これを遵守いたします。
+      </p>
+      <div class="p-p__wrapper">
+        <h2>1. 個人情報の取得について</h2>
+        <p>当社は、サービスを提供するにあたり、個人情報を適正な手段で取得いたします。</p>
+      </div>
+
+      <div class="p-p__wrapper">
+        <h2>2. 個人情報の利用目的</h2>
+        <p>当社は、取得した個人情報を以下の目的で利用します。</p>
+        <ol class="p-p__ol">
+          <li>施工サービスの提供・契約管理</li>
+          <li>お問い合わせ・ご相談への対応</li>
+          <li>各種見積もり・ご提案、施工管理</li>
+          <li>採用選考および人事管理（採用応募者の場合）</li>
+          <li>法令に基づく対応および契約上の義務履行</li>
+        </ol>
+      </div>
+
+      <div class="p-p__wrapper">
+        <h2>3. 個人情報の管理</h2>
+        <p>当社は、個人情報の適切な管理を行い、不正アクセス、紛失、破壊、改ざんおよび漏洩を防ぐため、以下の安全管理措置を講じます。</p>
+        <ul class="p-p__ul">
+          <li>セキュリティ対策ソフトの導入</li>
+          <li>関係者への教育・研修の実施</li>
+          <li>外部業者への適切な管理指導</li>
+        </ul>
+      </div>
+
+      <div class="p-p__wrapper">
+        <h2>4. 個人情報の第三者提供について</h2>
+        <p>当社は、以下の場合を除き、個人情報を第三者に提供することはありません。</p>
+        <ol class="p-p__ol">
+          <li>お客様の同意がある場合</li>
+          <li>法令に基づく開示要請があった場合</li>
+          <li>サービス提供のため、業務委託先（施工業者、設計事務所、不動産業者、金融機関等）に必要な範囲で提供する場合（この場合、適切な監督を行います）</li>
+        </ol>
+      </div>
+
+      <div class="p-p__wrapper">
+        <h2>5. 個人情報の開示・訂正・削除について</h2>
+        <p>個人情報について、必要に応じて登録内容の変更・削除を行います</p>
+      </div>
+
+      <div class="p-p__wrapper">
+        <h2>7. 法令および規範の遵守と継続的改善</h2>
+        <p>当社は、個人情報の取り扱いに関する日本の個人情報保護法およびその他の関連法令を遵守し、必要に応じて本ポリシーの内容を見直し、改善を行います。</p>
+      </div>
+    </div><!-- inner -->
+  </main>
+  <!-- **************** footer **************** -->
   <footer class="footer">
     <ul class="footer__ul">
       <li class="footer__li"><a href="./privacy-policy.html">Privacy Policy</a></li>
@@ -80,6 +138,7 @@
       </li>
     </ul>
   </footer>
-<script src="./js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
+
 </html>
