style: privacy-policyページのPCレスポンシブ調整

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -114,7 +114,7 @@
         <ol class="p-p__ol">
           <li>お客様の同意がある場合</li>
           <li>法令に基づく開示要請があった場合</li>
-          <li>サービス提供のため、業務委託先（施工業者、設計事務所、不動産業者、金融機関等）に必要な範囲で提供する場合（この場合、適切な監督を行います）</li>
+          <li>サービス提供のため、業務委託先に必要な範囲で提供する場合</li>
         </ol>
       </div>
 
@@ -124,8 +124,16 @@
       </div>
 
       <div class="p-p__wrapper">
-        <h2>7. 法令および規範の遵守と継続的改善</h2>
+        <h2>6. 法令および規範の遵守と継続的改善</h2>
         <p>当社は、個人情報の取り扱いに関する日本の個人情報保護法およびその他の関連法令を遵守し、必要に応じて本ポリシーの内容を見直し、改善を行います。</p>
+      </div>
+
+      <div class="p-p__wrapper">
+        <h2>7. お問い合わせ</h2>
+        <p>有限会社 田里興業</p>
+        <p>〒144-0055 東京都大田区仲六郷3-10-2</p>
+        <p>tel: 03-3733-2751</p>
+        <p>責任者 下重千賀子</p>
       </div>
     </div><!-- inner -->
   </main>
