style: ナビメニュー閉じるボタンのデザインを変更、不要なコードを削除

--- a/contact.html
+++ b/contact.html
@@ -64,10 +64,8 @@
           <li class="nav-item"><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
-      <btn class="nav__close-btn btn__close-trigger">閉じる</btn>
-      <div class="btn__close-trigger">
-        <span></span>
-        <span></span>
+      <div class="button-more btn__close-trigger">
+        <span class="button-more__text">戻る</span>
       </div>
     </div>
   </nav><!-- ナビここまで -->
@@ -101,7 +99,7 @@
           </div>
           <div class="form-row">
             <dt class="form__list__label"><label for="email">電話番号</label></dt>
-            <dd class="form__list__input"><input type="number" id="tel-number" name="tel-number" placeholder="000-0000-0000" required></dd>
+            <dd class="form__list__input"><input type="text" id="tel-number" name="tel-number" placeholder="000-0000-0000" required></dd>
           </div>
           <div class="form-row">
             <dt class="form__list__label"><label for="message">お問い合わせ内容<span>[必須]</span></label></dt>
