--- a/index.html
+++ b/index.html
@@ -67,10 +67,8 @@
             <li class="nav-item"><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
-        <btn class="nav__close-btn btn__close-trigger">閉じる</btn>
-        <div class="btn__close-trigger">
-          <span></span>
-          <span></span>
+        <div class="button-more btn__close-trigger">
+          <span class="button-more__text">戻る</span>
         </div>
       </div>
     </nav><!-- ナビここまで -->
@@ -149,7 +147,7 @@
           <div class="works__t">
             <h3 class="works__product__title deco-title">施工事例：ジョリパッド</h3>
             <div class="works__pic pic-f">
-              <div class="pic-f__img img02">
+              <div class="pic-f__img grayscale">
                 <img src="./img/top-joripad.webp" alt="ジョリパッド画像">
               </div>
             </div>
