--- a/recruit.html
+++ b/recruit.html
@@ -58,10 +58,8 @@
           <li class="nav-item"><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
-      <btn class="nav__close-btn btn__close-trigger">閉じる</btn>
-      <div class="btn__close-trigger">
-        <span></span>
-        <span></span>
+      <div class="button-more btn__close-trigger">
+        <span class="button-more__text">戻る</span>
       </div>
     </div>
   </nav><!-- ナビここまで -->
