style: ナビゲーションのレスポンシブを調整、ナビ戻るボタンの修正

--- a/recruit.html
+++ b/recruit.html
@@ -58,9 +58,7 @@
           <li class="nav-item"><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
-      <div class="button-more btn__close-trigger">
-        <span class="button-more__text">戻る</span>
-      </div>
+      <button class="nav__close-btn btn__close-trigger">戻る</button>
     </div>
   </nav><!-- ナビここまで -->
   <div class="sub-page__title">
