--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
             <li class="nav-item"><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
-        <div class="button-more btn__close-trigger">
-          <span class="button-more__text">戻る</span>
-        </div>
+        <button class="nav__close-btn btn__close-trigger">戻る</button>
       </div>
     </nav><!-- ナビここまで -->
     <!-- トップイメージ -->
