--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="about__wrapper">
             <div class="about__contents">
               <!-- titleのクラスのスタイルは、読み込みmain.scssの読み込み順の結果、about__titleが優先される -->
-              <p class="section__title__up about__title__up">わたしたちについて</p>
+              <p class="section__title__up about__title__up fadeUpTrigger">わたしたちについて</p>
               <h2 class="about__title section-title fadeUpTrigger">ABOUT</h2>
               <p class="about__description fadeUpTrigger">
                 今、再び注目を集めている『左官』<br>
@@ -142,7 +142,7 @@
         </div>
         <div class="works__inner works__tt">
 
-          <div class="works__t">
+          <div class="works__t fadeUpTrigger">
             <h3 class="works__product__title deco-title">施工事例：ジョリパッド</h3>
             <div class="works__pic pic-f">
               <div class="pic-f__img grayscale">
