style: デザイン変更 - ナビ背景色 - ボタン - トップページworksセクション背景色 - 問い合わせページ「必須」span
refactor: スタイルが重複していたクラスを統合

--- a/about.html
+++ b/about.html
@@ -64,11 +64,11 @@
           <li class="nav-item"><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
-      <button class="nav__close-btn btn__close-trigger">戻る</button>
+      <button class="btn btn-white btn__close-trigger">back</button>
     </div>
   </nav><!-- ナビここまで -->
   <div class="sub-page__title">
-    <div class="sub-page__title__container about-page__title">
+    <div class="sub-page__title__container">
       <h1>About</h1>
     </div>
   </div>
@@ -148,7 +148,7 @@
               <li class="company__item">
                 <dl>
                   <dt>建築業許可</dt>
-                  <dd>東京都知事 許可(般-23) 第146005号</dd>
+                  <dd>東京都知事 許可(般-23)<br>第146005号</dd>
                 </dl>
               </li>
               <li class="company__item">
