--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
           <li class="nav-item"><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
-      <button class="nav__close-btn btn__close-trigger">戻る</button>
+      <button class="btn btn-white btn__close-trigger">back</button>
     </div>
   </nav><!-- ナビここまで -->
   <div class="sub-page__title">
@@ -80,11 +80,11 @@
       <form class="contact__form" action="#" method="post">
         <dl class="form__list">
           <div class="form-row">
-            <dt class="form__list__label"><label for="name">お名前<span>[必須]</span></label></dt>
+            <dt class="form__list__label"><label for="name">お名前<span>必須</span></label></dt>
             <dd class="form__list__input"><input type="text" id="name" name="name" placeholder="" required></dd>
           </div>
           <div class="form-row">
-            <dt class="form__list__label"><label for="name">お名前(カナ)<span>[必須]</span></label></dt>
+            <dt class="form__list__label"><label for="name">お名前(カナ)<span>必須</span></label></dt>
             <dd class="form__list__input"><input type="text" id="name-read" name="name-read" placeholder="" required></dd>
           </div>
           <div class="form-row">
@@ -92,7 +92,7 @@
             <dd class="form__list__input"><input type="text" id="company-name" name="company-name" placeholder="" required></dd>
           </div>
           <div class="form-row">
-            <dt class="form__list__label"><label for="email">メールアドレス<span>[必須]</span></label></dt>
+            <dt class="form__list__label"><label for="email">メールアドレス<span>必須</span></label></dt>
             <dd class="form__list__input"><input type="email" id="email" name="email" placeholder="tasato@gmail.com" required></dd>
           </div>
           <div class="form-row">
@@ -100,14 +100,14 @@
             <dd class="form__list__input"><input type="text" id="tel-number" name="tel-number" placeholder="000-0000-0000" required></dd>
           </div>
           <div class="form-row">
-            <dt class="form__list__label"><label for="message">お問い合わせ内容<span>[必須]</span></label></dt>
+            <dt class="form__list__label"><label for="message">お問い合わせ内容<span>必須</span></label></dt>
             <dd class="form__list__input"><textarea id="message" name="message" rows="4" placeholder="(例)お問い合わせ内容を入力してください。" required></textarea>
             </dd>
           </div>
           <div class="form-row">
           </div>
         </dl>
-        <button class="form-btn" type="submit">送信</button>
+        <button class="btn btn-black form-btn" type="submit">送信</button>
       </form>
     </div>
   </main>
