--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -64,7 +64,7 @@
           <li class="nav-item"><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
-      <button class="nav__close-btn btn__close-trigger">戻る</button>
+      <button class="btn btn-white btn__close-trigger">back</button>
     </div>
   </nav><!-- ナビここまで -->
   <div class="sub-page__title">
