--- a/recruit.html
+++ b/recruit.html
@@ -58,7 +58,7 @@
           <li class="nav-item"><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
-      <button class="nav__close-btn btn__close-trigger">戻る</button>
+      <button class="btn btn-white btn__close-trigger">back</button>
     </div>
   </nav><!-- ナビここまで -->
   <div class="sub-page__title">
@@ -109,13 +109,13 @@
               </li>
               <li>
                 <h4>【未経験者】</h4>
-                <p class="recruit__add-margin-bottom">ベテラン職人の仕事に同行し、仕事内容を把握することからスタートします。</p>
-                <p class="recruit__add-margin-bottom">見習いとして基本的な仕事からはじめ、少しずつ技術を身につけていただきます。</p>
+                <p class="recruit__add-margin-bottom">ベテラン職人の仕事に同行し、仕事内容を把握することからスタートします</p>
+                <p class="recruit__add-margin-bottom">見習いとして基本的な仕事からはじめ、少しずつ技術を身につけていただきます</p>
               </li>
               <li>
                 <h4>【経験者】</h4>
-                <p class="recruit__add-margin-bottom">仕事の流れを把握していただき、即戦力として活躍いただきます。</p>
-                <p>経験が浅い方・ブランクがある方でも少しずつ仕事を覚えていけば問題ございません。</p>
+                <p class="recruit__add-margin-bottom">仕事の流れを把握していただき、即戦力として活躍いただきます</p>
+                <p>経験が浅い方・ブランクがある方でも少しずつ仕事を覚えていけば問題ございません</p>
               </li>
             </ul>
           </li>
@@ -157,7 +157,7 @@
               </li>
               <li>
                 <h4>【手当】</h4>
-                <p>状況に応じて、以下の手当を付与。</p>
+                <p>状況に応じ、各種手当を付与</p>
               </li>
             </ul>
           </li>
@@ -167,7 +167,7 @@
               <li class="recruit__add-margin-bottom">
                 <h4>【基本】</h4>
                 <p>土日休み</p>
-                <p>※現場スケジュールにより変動する可能性あり。</p>
+                <p>※現場スケジュールにより変動する可能性あり</p>
               </li>
               <li class="recruit__add-margin-bottom">
                 <h4>【有給休暇】</h4>
