--- a/works.html
+++ b/works.html
@@ -64,7 +64,7 @@
           <li class="nav-item"><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
-      <button class="nav__close-btn btn__close-trigger">戻る</button>
+      <button class="btn btn-white btn__close-trigger">back</button>
     </div>
   </nav><!-- ナビここまで -->
   <div class="sub-page__title">
@@ -78,12 +78,12 @@
       <p class="introduction">
         主にRC造の現場を請け負わせていただいております。そのほか2x4工法・改修工事等に関わる左官工事全般をお請けしています。
       </p>
-      <h3 class="works__product__title deco-title">下地処理</h3>
+      <h3 class="deco-title">下地処理</h3>
       <div class="pic-f works-page__pic">
-        <div class="pic-f__img img01">
+        <div class="img01">
           <img src="./img/sitaji-01.webp" alt="">
         </div>
-        <div class="pic-f__img img02">
+        <div class="img02">
           <img src="./img/sitaji-02.webp" alt="">
         </div>
       </div>
@@ -114,9 +114,9 @@
       </p>
     </div>
     <div class="works-page__inner">
-      <h3 class="works__product__title deco-title">ジョリパッド</h3>
+      <h3 class="deco-title">ジョリパッド</h3>
       <div class="pic-f">
-        <div class="pic-f__img">
+        <div class="">
           <img src="./img/joripad-01.webp" alt="">
         </div>
       </div>
@@ -147,7 +147,7 @@
       </p>
     </div>
     <div class="works-page__inner">
-      <h3 class="works__product__title deco-title">打ち放し仕上げ</h3>
+      <h3 class="deco-title">打ち放し仕上げ</h3>
     </div>
     <div class="wide-img">
       <img src="./img/outer-wall.webp" alt="">
@@ -159,7 +159,7 @@
     </div>
     <!-- スタンプ -->
     <div class="works-page__inner">
-      <h3 class="works__product__title deco-title">スタンプコンクリート</h3>
+      <h3 class="deco-title">スタンプコンクリート</h3>
       <div class="normal-img grayscale">
         <img src="./img/stamp-02.webp" alt="スタンプ画像2">
       </div>
@@ -167,7 +167,7 @@
         スタンプコンクリートは、コンクリートの表面に型押し（スタンプ）を施し、石材・レンガ・木目などの質感を再現する工法です。通常のコンクリートよりも意匠性が高く、耐久性に優れた床面仕上げが可能です。
       </p>
       <div class="pic-f">
-        <div class="pic-f__img grayscale">
+        <div class="grayscale">
           <img src="./img/stamp-01.webp" alt="スタンプ画像1">
         </div>
       </div>
