style: ボタンアクセシビリティを改善

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <li class="nav-item"><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
-        <button class="btn btn-white btn__close-trigger">back</button>
+        <button class="btn btn-white btn-close btn__close-trigger">back</button>
       </div>
     </nav><!-- ナビここまで -->
     <!-- トップイメージ -->
@@ -102,7 +102,7 @@
                 日々努力を積み重ねております。
               </p>
               <div class="btn btn-black about__btn fadeUpTrigger">
-                <a href="./recruit.html" class="btn__link-test">
+                <a href="./about.html" class="btn__link-test">
                   View more
                 </a>
               </div>
