--- a/recruit.html
+++ b/recruit.html
@@ -58,7 +58,7 @@
           <li class="nav-item"><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
-      <button class="btn btn-white btn__close-trigger">back</button>
+      <button class="btn btn-white btn-close btn__close-trigger">back</button>
     </div>
   </nav><!-- ナビここまで -->
   <div class="sub-page__title">
