style: index.htmlトップのテキストimgとメインimgのレスポンシブを調整

--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
     </nav><!-- ナビここまで -->
     <!-- トップイメージ -->
     <div class="top">
-      <p class="top__txt-img"><img src="./img/top-test5.png" alt=""></p>
-      <!-- <p class="top__txt-img"><img src="./img/縦書き_テスト.png" alt=""></p> -->
+      <p class="top__txt-img"><img src="./img/top-text-img.png" alt=""></p>
       <div class="top__img">
         <img src="./img/top.webp" alt="top画像">
       </div>
