fix: GitHub Pagesでサブページにてアイコン画像が表示されない問題を修正

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
-  <link rel="icon" href="/img/logo.webp">
+  <link rel="icon" href="./img/logo.png">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!-- jQueryの読み込み -->
@@ -85,23 +85,28 @@
           </div>
           <div class="form-row">
             <dt class="form__list__label"><label for="name">お名前(カナ)<span>必須</span></label></dt>
-            <dd class="form__list__input"><input type="text" id="name-read" name="name-read" placeholder="" required></dd>
+            <dd class="form__list__input"><input type="text" id="name-read" name="name-read" placeholder="" required>
+            </dd>
           </div>
           <div class="form-row">
             <dt class="form__list__label"><label for="name">企業名(法人の場合)</label></dt>
-            <dd class="form__list__input"><input type="text" id="company-name" name="company-name" placeholder="" required></dd>
+            <dd class="form__list__input"><input type="text" id="company-name" name="company-name" placeholder=""
+                required></dd>
           </div>
           <div class="form-row">
             <dt class="form__list__label"><label for="email">メールアドレス<span>必須</span></label></dt>
-            <dd class="form__list__input"><input type="email" id="email" name="email" placeholder="tasato@gmail.com" required></dd>
+            <dd class="form__list__input"><input type="email" id="email" name="email" placeholder="tasato@gmail.com"
+                required></dd>
           </div>
           <div class="form-row">
             <dt class="form__list__label"><label for="email">電話番号</label></dt>
-            <dd class="form__list__input"><input type="text" id="tel-number" name="tel-number" placeholder="000-0000-0000" required></dd>
+            <dd class="form__list__input"><input type="text" id="tel-number" name="tel-number"
+                placeholder="000-0000-0000" required></dd>
           </div>
           <div class="form-row">
             <dt class="form__list__label"><label for="message">お問い合わせ内容<span>必須</span></label></dt>
-            <dd class="form__list__input"><textarea id="message" name="message" rows="4" placeholder="(例)お問い合わせ内容を入力してください。" required></textarea>
+            <dd class="form__list__input"><textarea id="message" name="message" rows="4"
+                placeholder="(例)お問い合わせ内容を入力してください。" required></textarea>
             </dd>
           </div>
           <div class="form-row">
